--- a/templates/burguer/base.html
+++ b/templates/burguer/base.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>
-        {% block titulo %} {% endblock%}
+        {% block titulo %}
+
+        {% endblock%}
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
 </head>
-<body>
-    {% block conteudo %} {% endblock%}
+<body class="bg-warning">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <nav>
+                    {% block navbar %}
+
+                    {% endblock%}
+                </nav>
+                <main>
+                    {% block banner %}
+
+                    {% endblock%}
+
+                    {% block conteudo %}
+
+                    {% endblock%}
+                </main>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
