--- a/templates/burguer/home.html
+++ b/templates/burguer/home.html
@@ -1,9 +1,18 @@
 {% extends 'burguer/base.html' %}
+{% load static %}
 
 {% block titulo %}
-    Página Inicial
+    Pyburguer
+{% endblock%}
+
+{% block navbar %}
+    {% include 'burguer/fragments/navbar.html' %}
+{% endblock%}
+
+{% block banner %}
+    {% include 'burguer/fragments/banner.html' %}
 {% endblock%}
 
 {% block conteudo %}
-    <h1> Bem vindo!!</h1>
+    {% include 'burguer/fragments/conteudo.html' %}
 {% endblock%}
